# ktl

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: README.md
config/cyclonedds/: README.md  go2_eth.template.xml  go2_local.xml
config/go2/: README.md  go2_network.env
config/hesai/: xt16_config.yaml
config/laser_scan/: go2_laserscan_self_filter.yaml  go2_pointcloud_to_laserscan.yaml
config/nav2/: README.md  go2_hesai_nav2_params.yaml  go2_nav2_params.yaml
config/slam/: go2_hesai_slam_toolbox.yaml  go2_slam_toolbox.yaml
docs/: cyclonedds_go2_setup.md  go2_setup_manual.md
docs/assets/: README.md
docs/checklists/: README.md
env-hooks/: ktl_local_ros_debs.sh
labs/: 1_system.md  2_slam.md  3_nav.md  cmd_manuals.md  realsense_d435i.md
launch/: README.md  go2_hesai_mapping.launch.py  go2_hesai_nav.launch.py  go2_mapping.launch.py  go2_nav.launch.py  go2_navigation.launch.py  go2_rviz_check.launch.py  go2_slam.launch.py  go2_slamnav.launch.py  hesai_xt16.launch.py
logs/: README.md
maps/: README.md  ktl.pgm  ktl.yaml  map_2026-07-10.data  map_2026-07-10.pgm  map_2026-07-10.yaml  map_260710_1.data  map_260710_1.pgm  map_260710_1.yaml  map_260713_1.data  map_260713_1.pgm  map_260713_1.yaml  map_260715_105707.pgm  map_260715_105707.yaml  map_practice.data  map_practice.pgm  map_practice.yaml  map_practice1.data  map_practice1.pgm  map_practice1.yaml
rviz/: README.md  go2_mapping.rviz  go2_navigation.rviz  go2_sensor_check.rviz
scripts/: README.md  bridge_pandar_to_udpframe.py  build_go2_workspace.bash  configure_go2_eth.bash  filter_laserscan_self.py  restamp_laserscan.py  restamp_pointcloud2.py  setup_go2_cyclonedds.bash  setup_local_ros_debs.bash
