<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ktl</name>
  <version>0.1.0</version>
  <description>KTL Go2 setup, SLAM, and navigation launch/config assets.</description>
  <maintainer email="todo@example.com">ktl</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>go2_base</exec_depend>
  <exec_depend>go2_description</exec_depend>
  <exec_depend>hesai_ros_driver</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
